<resources>
    <string name="app_name">FindATruck</string>
    <string name="starup_msg">INGRESE SUS DATOS</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrar</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="phone_data">Teléfono</string>
    <string name="email_data">Email</string>
    <string name="logout">Salir</string>
    <string name="accept">Aceptar</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="continue_btn">CONTINUAR</string>
    <string name="price">Precio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email">E-mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>