<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interface_user.Data">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_logo_data"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/user_field"
                style="@style/inputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/top_input"
                android:contentDescription="@string/user"
                android:hint="@string/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintTop_toTopOf="@+id/logo"
                app:startIconDrawable="@drawable/user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textUri"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/name_field"
                style="@style/inputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="@+id/user_field"
                app:layout_constraintStart_toStartOf="@+id/user_field"
                app:layout_constraintTop_toBottomOf="@+id/user_field"
                app:startIconDrawable="@drawable/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textUri"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/last_name_field"
                style="@style/inputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/last_name"
                android:hint="@string/last_name"
                app:layout_constraintStart_toStartOf="@+id/name_field"
                app:layout_constraintTop_toBottomOf="@+id/name_field"
                app:startIconDrawable="@drawable/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textUri"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/email_field"
                style="@style/inputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/email"
                android:hint="@string/email"
                app:layout_constraintStart_toStartOf="@+id/last_name_field"
                app:layout_constraintTop_toBottomOf="@+id/last_name_field"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/password_field"
                style="@style/inputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/password"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="@+id/email_field"
                app:layout_constraintTop_toBottomOf="@+id/email_field"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/phone_field"
                style="@style/inputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/phone_data"
                android:hint="@string/phone_data"
                app:layout_constraintStart_toStartOf="@+id/password_field"
                app:layout_constraintTop_toBottomOf="@+id/password_field"
                app:startIconDrawable="@drawable/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|number"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/accept_button"
                style="@style/btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/top_to_bottom_btn"
                android:text="@string/accept"
                app:cornerRadius="@dimen/btn_radius_cornes"
                app:layout_constraintTop_toTopOf="parent">
            </com.google.android.material.button.MaterialButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>