<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                style="@style/margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/msg_view"
                style="@style/msg"
                android:layout_marginTop="@dimen/margin_top_msg"
                android:contentDescription="@string/starup_msg"
                android:text="@string/starup_msg"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_msg"
                app:layout_constraintEnd_toEndOf="@+id/user_field"
                app:layout_constraintStart_toStartOf="@+id/user_field"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/user_field"
                style="@style/inputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top_user"
                android:contentDescription="@string/user"
                android:hint="@string/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/msg_view"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textUri"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/password_field"
                style="@style/inputs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top_password"
                android:contentDescription="@string/password"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_field"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/log_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_btn"
                android:layout_marginStart="@dimen/margin_start_btn"
                android:layout_marginEnd="@dimen/margin_end_btn"
                android:text="@string/login"
                app:cornerRadius="@dimen/btn_radius_cornes"
                app:layout_constraintEnd_toStartOf="@+id/user_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>